--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -15,6 +15,8 @@
 .listBlock li a {
     text-decoration: none;
     margin-right: 20px;
+    color: #3f88d8;
+    font-weight: bold;
 }
 
 input {
@@ -22,17 +24,20 @@ input {
     width: 20vw;
     font-size: 20px;
     border-radius: 7px;
-    border: 1px solid;
+    border: 3px solid #3176d2;
     box-sizing: border-box;
     margin-right: 10px;
+    color: #3f88d8;
 }
 
 .headerButton {
     font-size: 20px;
     width: 85px;
     padding: 20px 10px;
-    background-color: white;
+    color: white;
+    background-color: #3176d2;
     border-radius: 7px;
     border: 1px solid;
     box-sizing: border-box;
+    cursor: pointer;
 }
