--- a/src/components/GenresList/GenresList.module.css
+++ b/src/components/GenresList/GenresList.module.css
@@ -1,6 +1,7 @@
 .badgeBlock {
+    width: 90vw;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
-    margin-top: 10px;
+    margin: 10px auto;
 }
