--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -1,3 +1,24 @@
 .movieCardBlock {
     width: 23%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.movieTitle {
+    text-align: center;
+    font-size: 30px;
+    height: 20%;
+}
+
+.movieTitle a {
+    text-decoration: none;
+    color: #3f88d8;
+    font-weight: bold;
+}
+
+.movieTitle a:hover {
+    text-decoration: underline;
+    color: orange;
 }
