--- a/src/components/PosterPreview/PosterPreview.module.css
+++ b/src/components/PosterPreview/PosterPreview.module.css
@@ -1,9 +1,5 @@
-/*.posterBlock {*/
-/*    width: 350px;*/
-/*    height: 500px;*/
-/*}*/
-
 .posterBlock img {
     width: 100%;
     height: 100%;
+    border-radius: 10px;
 }
